Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-17854

Router should not drop message past deadline

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • Lustre 2.16.0
    • None
    • None
    • 3
    • 9223372036854775807

    Description

      Router logs show a lot of messages being dropped because they have exceeded their deadline:

      $ grep -c 'exceeded message deadline' dklog.router.*206*.fmt
      dklog.router.485.20240206_113601.fmt:1092
      dklog.router.486.20240206_113601.fmt:261
      dklog.router.93.20240206_113601.fmt:1127
      dklog.router.94.20240206_113601.fmt:1107
      $
      

      This is new code added by LU-16303. It is possible that this is causing a regression in this case as some traffic that would normally be forwarded successfully by the router is instead being dropped.

      This ticket will track removing this behavior for messages being forwarded.

      Attachments

        Activity

          People

            hornc Chris Horn
            hornc Chris Horn
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: